# pwbox-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
benches/: eq.rs
examples/: key_util.rs  keys_generator.rs  sodium_keypair.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/ops/drop/: trait.Drop.js
implementors/pwbox/: trait.UnauthenticatedCipher.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
pwbox/: all.html  enum.EraseError.html  enum.Error.html  index.html  sidebar-items.js  struct.CipherOutput.html  struct.CipherWithMac.html  struct.ErasedPwBox.html  struct.Eraser.html  struct.MacMismatch.html  struct.PwBox.html  struct.PwBoxBuilder.html  struct.RestoredPwBox.html  struct.ScryptParams.html  struct.SensitiveData.html  trait.Cipher.html  trait.DeriveKey.html  trait.Mac.html  trait.Suite.html  trait.UnauthenticatedCipher.html
pwbox/cipher_with_mac/: struct.CipherWithMac.html  trait.Mac.html  trait.UnauthenticatedCipher.html
pwbox/erased/: enum.EraseError.html  struct.ErasedPwBox.html  struct.Eraser.html  trait.Suite.html
pwbox/pure/: index.html  sidebar-items.js  struct.PureCrypto.html  struct.Scrypt.html
pwbox/rcrypto/: index.html  sidebar-items.js  struct.Aes128Ctr.html  struct.Aes128Gcm.html  struct.Keccak256.html  struct.RustCrypto.html  struct.Scrypt.html
pwbox/sodium/: index.html  sidebar-items.js  struct.ChaCha20Poly1305.html  struct.Scrypt.html  struct.ScryptCompat.html  struct.Sodium.html  struct.XSalsa20Poly1305.html
pwbox/traits/: struct.CipherOutput.html  struct.MacMismatch.html  trait.Cipher.html  trait.DeriveKey.html
pwbox/utils/: struct.ScryptParams.html  struct.SensitiveData.html
src/: cipher_with_mac.rs  erased.rs  lib.rs  pure.rs  rcrypto.rs  sodium.rs  traits.rs  utils.rs
src/pwbox/: cipher_with_mac.rs.html  erased.rs.html  lib.rs.html  pure.rs.html  rcrypto.rs.html  sodium.rs.html  traits.rs.html  utils.rs.html
tests/: serialization.rs
tests/e2e/: enc.toml  key_util.sh
wasm/: Cargo.toml  README.md  test.js
wasm/src/: lib.rs
