[package]
name = "pwbox"
version = "0.3.0"
authors = ["The Exonum Team <contact@exonum.com>"]
repository = "https://github.com/exonum/pwbox-rs"
documentation = "https://docs.rs/pwbox"
readme = "README.md"
edition = "2018"
license = "Apache-2.0"
keywords = ["cryptography", "encryption", "password-based", "exonum"]
categories = ["cryptography"]
description = "Modular password-based encryption"

[dependencies]
anyhow = { version = "1.0.26", default-features = false }
rand_core = "0.6.0"
constant_time_eq = "0.1.3"
smallvec = { version = "1.6.0", default-features = false }
zeroize = { version = "1.2.0", default-features = false, features = ["alloc"] }

# serialization-related dependencies
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex-buffer-serde = { version = "0.2.2", default-features = false }

# crypto backends
exonum_sodiumoxide = { version = ">=0.0.21, <=0.0.23", optional = true }
rust-crypto = { version = "0.2.36", optional = true }
chacha20poly1305 = { version = "0.1.0", optional = true }
scrypt = { version = "0.5.0", optional = true, default-features = false }

[dev-dependencies]
assert_matches = "1.3.0"
hex = "0.4.2"
rand = "0.8.0"
rpassword = "3.0.2"
serde_cbor = "0.10.0"
serde_yaml = "0.8.9"
structopt = "0.2.18"
toml = "0.5.1"
version-sync = "0.9.1"

[features]
default = ["std", "exonum_sodiumoxide"]
std = ["anyhow/std", "scrypt/std"]
pure = ["chacha20poly1305", "scrypt"]

[[test]]
name = "serialization"
path = "tests/serialization.rs"
required-features = ["rust-crypto", "exonum_sodiumoxide"]

[[example]]
name = "sodium_keypair"
path = "examples/sodium_keypair.rs"
required-features = ["std", "exonum_sodiumoxide"]

[[example]]
name = "key-util"
path = "examples/key_util.rs"
required-features = ["std", "exonum_sodiumoxide"]

[workspace]
members = [".", "wasm"]
