[package]
name = "pwbox-wasm"
version = "0.1.0"
authors = ["The Exonum Team <contact@exonum.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Testing usability of pwbox in WASM"
repository = "https://github.com/exonum/pwbox-rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pwbox = { path = "..", default-features = false, features = ["pure"] }
rand_core = "0.6.0"
# WASM glue
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
